--- a/index.html
+++ b/index.html
@@ -23,7 +23,101 @@
 </head>
 
 <body>
-
+    <section class="class1">
+        <h1>Delight made easy</h1>
+        <p>We make it fast and easy for businesses to delight their customers and employees.</p>
+        <button class="class1">GET STARTED</button>
+        <button class="class2">CONTACT SALES</button>
+    </section>
+    <section class="class2">
+        <h2>An experience they’ll love</h2>
+        <p>Our fresh approach to business software has enabled over 50,000 companies big and small across the globe to
+            exceed customer and employee expectations. We deliver on the unfulfilled promise of easy-to-use SaaS
+            software, and help our customers drive clear business results.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div><img src="" alt=""></div>
+                    <h2>Delight your customers</h2>
+                    <p>Exceed the evolving expectations your customers have, with contextual and relevant conversations
+                        powered by a 360-degree customer view.</p>
+                    <a href="" class="button-white">SOLUTIONS FOR CUSTOMER SUPPORT</a>
+                    <a href="" class="button-white">SOLUTIONS FOR SALES AND MARKETING</a>
+                </div>
+                <div class="col-md-6">
+                    <div><img src="" alt=""></div>
+                    <h2>Delight your employees</h2>
+                    <p>Help your employees crush internal NPS ratings with our intuitive, easy-to-use products, so they
+                        can spend less time navigating bloated, difficult-to-use legacy software.</p>
+                    <a href="" class="button-white">SOLUTIONS FOR IT SERVICE MANAGEMENT</a>
+                    <a href="" class="button-white">SOLUTIONS FOR HR MANAGEMENT</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="class3">
+        <div>
+            <h2>Frictionless, simple, easy</h2>
+            <p>Freshworks makes it fast and easy for businesses to delight their customers and employees.</p>
+            <p>We take a fresh approach to how businesses discover, engage with, and realize value from software throughout their journey.</p>
+            <div>
+                <div class="row">
+                    <div class="l-col-widget col-sm-5">
+                        <img src="" alt="">
+                        <div>
+                            <h4>Get up and running with no barriers</h4>
+                            <p>Try or purchase our software directly from our website, and onboard in a matter of days, not months.</p>
+                            <p>
+                                <a href="#">Start free trial</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="l-col-widget col-sm-5">
+                        <img src="" alt="">
+                        <div>
+                            <h4>Choose your pricing plan</h4>
+                            <p>Our pricing plans are designed for modern business use cases and affordable for organizations of all sizes.</p>
+                            <p>
+                                <a href="#">Start free trial</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row">
+                    <div class="l-col-widget col-sm-5">
+                        <img src="" alt="">
+                        <div>
+                            <h4>Build and customize as you go</h4>
+                            <p>Extend and tailor experiences to meet your unique business needs, with low-code development and over 1,100 custom apps made available on our marketplace.</p>
+                            <p>
+                                <a href="#">Start free trial</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="l-col-widget col-sm-5">
+                            <img src="" alt="">
+                            <div>
+                                <h4>Create value, fast</h4>
+                                <p>Accelerate your team’s productivity and efficiency with modern automation and collaboration tools, to get tangible results in no time.</p>
+                                <p>
+                                    <a href="#">Start free trial</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="class4"></section>
+    <section class="class5"></section>
+    <section class="class6"></section>
+    <section class="class7"></section>
+    <section class="class8"></section>
 </body>
 
 </html>
