start content +styles

--- a/index.html
+++ b/index.html
@@ -24,10 +24,29 @@
 
 <body>
     <section class="class1">
-        <h1>Delight made easy</h1>
-        <p>We make it fast and easy for businesses to delight their customers and employees.</p>
-        <button class="class1">GET STARTED</button>
-        <button class="class2">CONTACT SALES</button>
+        <div class="bg-img">
+            <!-- <img style="height:540px;width:100%;" src="images/bg-img.png" alt="bg-img"> -->
+        </div>
+        <div class="std-page start">
+            <div class="row">
+                <div class="col-md-6 start-left-box">
+                    <h1>Delight made easy</h1>
+                    <p class="start-text">We make it fast and easy for businesses to delight their customers and employees.</p>
+                    <div class="mt-md">
+                        <button type="button" class="button btn btn-dark">GET STARTED</button>
+                        <button type="button" class="button btn btn-outline-dark">CONTACT SALES</button>
+                    </div>
+
+                </div>
+                <div class="col-md-6 img-align-bottom">
+                    <div class="wrap-img loaded">
+                        <img class="original-img fadein"style="width:530px;" src="images/girl-with-phone.png" alt="">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
     <section class="class2">
         <h2>An experience they’ll love</h2>
@@ -59,14 +78,16 @@
         <div>
             <h2>Frictionless, simple, easy</h2>
             <p>Freshworks makes it fast and easy for businesses to delight their customers and employees.</p>
-            <p>We take a fresh approach to how businesses discover, engage with, and realize value from software throughout their journey.</p>
+            <p>We take a fresh approach to how businesses discover, engage with, and realize value from software
+                throughout their journey.</p>
             <div>
                 <div class="row">
                     <div class="l-col-widget col-sm-5">
                         <img src="" alt="">
                         <div>
                             <h4>Get up and running with no barriers</h4>
-                            <p>Try or purchase our software directly from our website, and onboard in a matter of days, not months.</p>
+                            <p>Try or purchase our software directly from our website, and onboard in a matter of days,
+                                not months.</p>
                             <p>
                                 <a href="#">Start free trial</a>
                             </p>
@@ -78,20 +99,22 @@
                         <img src="" alt="">
                         <div>
                             <h4>Choose your pricing plan</h4>
-                            <p>Our pricing plans are designed for modern business use cases and affordable for organizations of all sizes.</p>
+                            <p>Our pricing plans are designed for modern business use cases and affordable for
+                                organizations of all sizes.</p>
                             <p>
                                 <a href="#">Start free trial</a>
                             </p>
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="row">
                     <div class="l-col-widget col-sm-5">
                         <img src="" alt="">
                         <div>
                             <h4>Build and customize as you go</h4>
-                            <p>Extend and tailor experiences to meet your unique business needs, with low-code development and over 1,100 custom apps made available on our marketplace.</p>
+                            <p>Extend and tailor experiences to meet your unique business needs, with low-code
+                                development and over 1,100 custom apps made available on our marketplace.</p>
                             <p>
                                 <a href="#">Start free trial</a>
                             </p>
@@ -102,7 +125,8 @@
                             <img src="" alt="">
                             <div>
                                 <h4>Create value, fast</h4>
-                                <p>Accelerate your team’s productivity and efficiency with modern automation and collaboration tools, to get tangible results in no time.</p>
+                                <p>Accelerate your team’s productivity and efficiency with modern automation and
+                                    collaboration tools, to get tangible results in no time.</p>
                                 <p>
                                     <a href="#">Start free trial</a>
                                 </p>
