starter code updated

--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
 </head>
 
 <body>
-    <section class="class1 start-right-img">
- 
- <div class="bg-img"  style="height:592px; background-image: url('../../images/bg-img.png');"  >
-            <!-- <img style="height:540px;width:100%;" src="images/bg-img.png" alt="bg-img"> -->
+    <!-- <section class="class1 start-right-img">
+
+        <div class="bg-img" style=" background-image: url('../../images/bg-img.png');">
+            <img style="height:540px;width:100%;" src="images/bg-img.png" alt="bg-img">
         </div>
         <div class="std-page start">
             <div class="row">
                 <div class="col-md-6 start-left-box ">
                     <h1>Delight made easy</h1>
-                    <p class="start-text">We make it fast and easy for businesses to delight their customers and employees.</p>
+                    <p class="start-text">We make it fast and easy for businesses to delight their customers and
+                        employees.</p>
                     <div class="mt-md">
                         <a class="button btn btn-dark">GET STARTED</a>
                         <a class="button  btn btn-outline-dark">CONTACT SALES</a>
@@ -41,13 +42,32 @@
                 </div>
                 <div class="col-md-6 img-align-bottom">
                     <div class="wrap-img loaded">
-                        <img class="original-img fadein"style="width:530px;" src="images/girl-with-phone.png" alt="">
+                        <img class="original-img fadein" style="width:530px;" src="images/girl-with-phone.png" alt="">
 
                     </div>
                 </div>
             </div>
         </div>
 
+    </section> -->
+    <section class="class1">
+        <div style="height: 100; width: 100%;" class="bg-img"></div>
+        <div class="std-page">
+            <div class=" row">
+                <div class="col-lg-6">
+                    <h1>Delight made easy</h1>
+                    <p class="start-text">We make it fast and easy for businesses to delight their customers and
+                        employees.</p>
+                    <div class="mt-md">
+                        <a class="button btn btn-dark">GET STARTED</a>
+                        <a class="button  btn btn-outline-dark">CONTACT SALES</a>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <img class="img-fluid original-img fadein" style="width:530px;" src="images/girl-with-phone.png" alt="">
+                </div>
+            </div>
+        </div>
     </section>
     <section class="class2">
         <h2>An experience they’ll love</h2>
