reponsiveness for starter

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div style="height: 100; width: 100%;" class="bg-img"></div>
         <div class="std-page">
             <div class=" row">
-                <div class="col-lg-6">
+                <div class="col-md-6">
                     <h1>Delight made easy</h1>
                     <p class="start-text">We make it fast and easy for businesses to delight their customers and
                         employees.</p>
@@ -63,8 +63,8 @@
                         <a class="button  btn btn-outline-dark">CONTACT SALES</a>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <img class="img-fluid original-img fadein" style="width:530px;" src="images/girl-with-phone.png" alt="">
+                <div class="col-md-6">
+                    <img class="img-fluid responsive original-img fadein"  src="images/girl-with-phone.png" alt="">
                 </div>
             </div>
         </div>
