--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="class1">
         <div style="height: 100; width: 100%;" class="bg-img"></div>
         <div class="std-page">
-            <div class=" row">
+            <div class="row start">
                 <div class="col-md-6">
                     <h1>Delight made easy</h1>
                     <p class="start-text">We make it fast and easy for businesses to delight their customers and
@@ -64,37 +64,55 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-fluid responsive original-img fadein"  src="images/girl-with-phone.png" alt="">
+                    <img class="img-fluid responsive original-img fadein" src="images/girl-with-phone.png" alt="">
                 </div>
             </div>
         </div>
     </section>
+    <hr>
     <section class="class2">
-        <h2>An experience they’ll love</h2>
-        <p>Our fresh approach to business software has enabled over 50,000 companies big and small across the globe to
-            exceed customer and employee expectations. We deliver on the unfulfilled promise of easy-to-use SaaS
-            software, and help our customers drive clear business results.</p>
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div><img src="" alt=""></div>
-                    <h2>Delight your customers</h2>
-                    <p>Exceed the evolving expectations your customers have, with contextual and relevant conversations
-                        powered by a 360-degree customer view.</p>
-                    <a href="" class="button-white">SOLUTIONS FOR CUSTOMER SUPPORT</a>
-                    <a href="" class="button-white">SOLUTIONS FOR SALES AND MARKETING</a>
-                </div>
-                <div class="col-md-6">
-                    <div><img src="" alt=""></div>
-                    <h2>Delight your employees</h2>
-                    <p>Help your employees crush internal NPS ratings with our intuitive, easy-to-use products, so they
-                        can spend less time navigating bloated, difficult-to-use legacy software.</p>
-                    <a href="" class="button-white">SOLUTIONS FOR IT SERVICE MANAGEMENT</a>
-                    <a href="" class="button-white">SOLUTIONS FOR HR MANAGEMENT</a>
+            <h2 class="align-h2">An experience they’ll love</h2>
+            <p class="para-section-2">Our fresh approach to business software has enabled over 50,000 companies big and
+                small across the globe
+                to
+                exceed customer and employee expectations. We deliver on the unfulfilled promise of easy-to-use SaaS
+                software, and help our customers drive clear business results.</p>
+            <div class="std-page container">
+                <div class="row row-margin">
+                    <div class="col-lg-6 divider-right mb-md">
+                        <div class="wrap wrap-no-hover two-column">
+                            <div style="overflow: hidden;" class="wrap-section-2-img"><img style=" max-width: 100%; height: auto; " class="responsive" src="images/customers.jpg"
+                                    alt="customers"></div>
+                            <h2 class="h2-section2 align-h2">Delight your customers</h2>
+                            <p>Exceed the evolving expectations your customers have, with contextual and relevant
+                                conversations
+                                powered by a 360-degree customer view.</p>
+                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR CUSTOMER SUPPORT</a>
+                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR SALES AND MARKETING</a>
+                        </div>
+
+                    </div>
+                    <div class="col-lg-6 mb-md">
+                        <div class="wrap wrap-no-hover two-column">
+                            <div style="overflow: hidden;" class="wrap-section-2-img"><img style=" max-width: 100%; height: auto; " class="responsive" src="images/employees.jpg"
+                                    alt="employees"></div>
+                            <h2 class="h2-section2 align-h2">Delight your employees</h2>
+                            <p>Help your employees crush internal NPS ratings with our intuitive, easy-to-use products,
+                                so
+                                they
+                                can spend less time navigating bloated, difficult-to-use legacy software.</p>
+                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR IT SERVICE MANAGEMENT</a>
+                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR HR MANAGEMENT</a>
+                        </div>
+
+
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <hr>
     <section class="class3">
         <div>
             <h2>Frictionless, simple, easy</h2>
