--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
             </div>
         </div>
     </section>
-    <hr>
     <section class="class2">
         <div class="container">
             <h2 class="align-h2">An experience they’ll love</h2>
@@ -82,28 +81,34 @@
                 <div class="row row-margin">
                     <div class="col-lg-6 divider-right mb-md">
                         <div class="wrap wrap-no-hover two-column">
-                            <div style="overflow: hidden;" class="wrap-section-2-img"><img style=" max-width: 100%; height: auto; " class="responsive" src="images/customers.jpg"
-                                    alt="customers"></div>
+                            <div style="overflow: hidden;" class="wrap-section-2-img"><img
+                                    style=" max-width: 100%; height: auto; " class="responsive"
+                                    src="images/customers.jpg" alt="customers"></div>
                             <h2 class="h2-section2 align-h2">Delight your customers</h2>
                             <p>Exceed the evolving expectations your customers have, with contextual and relevant
                                 conversations
                                 powered by a 360-degree customer view.</p>
-                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR CUSTOMER SUPPORT</a>
-                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR SALES AND MARKETING</a>
+                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR
+                                CUSTOMER SUPPORT</a>
+                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR
+                                SALES AND MARKETING</a>
                         </div>
 
                     </div>
                     <div class="col-lg-6 mb-md">
                         <div class="wrap wrap-no-hover two-column">
-                            <div style="overflow: hidden;" class="wrap-section-2-img"><img style=" max-width: 100%; height: auto; " class="responsive" src="images/employees.jpg"
-                                    alt="employees"></div>
+                            <div style="overflow: hidden;" class="wrap-section-2-img"><img
+                                    style=" max-width: 100%; height: auto; " class="responsive"
+                                    src="images/employees.jpg" alt="employees"></div>
                             <h2 class="h2-section2 align-h2">Delight your employees</h2>
                             <p>Help your employees crush internal NPS ratings with our intuitive, easy-to-use products,
                                 so
                                 they
                                 can spend less time navigating bloated, difficult-to-use legacy software.</p>
-                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR IT SERVICE MANAGEMENT</a>
-                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR HR MANAGEMENT</a>
+                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR
+                                IT SERVICE MANAGEMENT</a>
+                            <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">SOLUTIONS FOR
+                                HR MANAGEMENT</a>
                         </div>
 
 
@@ -113,69 +118,118 @@
         </div>
     </section>
     <hr>
-    <section class="class3">
-        <div>
-            <h2>Frictionless, simple, easy</h2>
-            <p>Freshworks makes it fast and easy for businesses to delight their customers and employees.</p>
-            <p>We take a fresh approach to how businesses discover, engage with, and realize value from software
-                throughout their journey.</p>
-            <div>
-                <div class="row">
-                    <div class="l-col-widget col-sm-5">
-                        <img src="" alt="">
-                        <div>
-                            <h4>Get up and running with no barriers</h4>
-                            <p>Try or purchase our software directly from our website, and onboard in a matter of days,
-                                not months.</p>
-                            <p>
-                                <a href="#">Start free trial</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="l-col-widget col-sm-5">
-                        <img src="" alt="">
-                        <div>
-                            <h4>Choose your pricing plan</h4>
-                            <p>Our pricing plans are designed for modern business use cases and affordable for
-                                organizations of all sizes.</p>
-                            <p>
-                                <a href="#">Start free trial</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+    <section class="class3 section-content-grid section-content-grid-home l-section l-section-home section-dark-bg  "
+        data-scroll-target="">
+        <div class="l-page container ">
+            <div class="l-section-heading">
 
-                <div class="row">
-                    <div class="l-col-widget col-sm-5">
-                        <img src="" alt="">
-                        <div>
-                            <h4>Build and customize as you go</h4>
-                            <p>Extend and tailor experiences to meet your unique business needs, with low-code
-                                development and over 1,100 custom apps made available on our marketplace.</p>
-                            <p>
-                                <a href="#">Start free trial</a>
-                            </p>
-                        </div>
+
+                <h2 class="align-center">Frictionless, simple, easy</h2>
+
+                <p class="align-center">Freshworks makes it fast and easy for businesses to delight their customers and
+                    employees.</p>
+
+                <p class="align-center">We take a fresh approach to how businesses discover, engage with, and realize
+                    value from software throughout their journey.</p>
+
+
+
+            </div>
+            <div class="row">
+                <div class="l-col-widget col-sm-5">
+
+
+                    <img class="icon-text-image icon-text-image-small"
+                        src="https://website-assets-fw.freshworks.com/attachments/cksegp1j016clf6g002na6gni-icon-get-up.full.png">
+                    <div class="  ">
+
+
+                        <h4>Get up and running with no barriers</h4>
+
+                        <p>Try or purchase our software directly from our website, and onboard in a matter of days, not
+                            months.</p>
+
+                        <p><a href="https://www.freshworks.com/products"><span class="forward--link link mt-xs">Start
+                                    free trial</span></a></p>
+
+
                     </div>
-                    <div class="row">
-                        <div class="l-col-widget col-sm-5">
-                            <img src="" alt="">
-                            <div>
-                                <h4>Create value, fast</h4>
-                                <p>Accelerate your team’s productivity and efficiency with modern automation and
-                                    collaboration tools, to get tangible results in no time.</p>
-                                <p>
-                                    <a href="#">Start free trial</a>
-                                </p>
-                            </div>
-                        </div>
+
+
+
+                </div>
+                <div class="l-col-widget col-sm-5 col-sm-offset-2">
+
+
+                    <img class="icon-text-image icon-text-image-small"
+                        src="https://website-assets-fw.freshworks.com/attachments/cksegthxt1evgprg0agwz8g3j-icon-choose-price.full.png">
+                    <div class="  ">
+
+
+                        <h4>Choose your pricing plan</h4>
+
+                        <p>Our pricing plans are designed for modern business use cases and affordable for organizations
+                            of all sizes.</p>
+
+                        <p><a href="https://www.freshworks.com/pricing"><span class="forward--link link mt-xs">See
+                                    pricing</span></a></p>
+
+
                     </div>
+
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="l-col-widget col-sm-5">
+
+
+                    <img class="icon-text-image icon-text-image-small"
+                        src="https://website-assets-fw.freshworks.com/attachments/cksegverv2m2ujqfzql2x6dr0-icon-build-and.full.png">
+                    <div class="  ">
+
+
+                        <h4>Build and customize as you go</h4>
+
+                        <p>Extend and tailor experiences to meet your unique business needs, with low-code development
+                            and over 1,100 custom apps made available on our marketplace.</p>
+
+                        <p><a href="https://www.freshworks.com/apps/"><span
+                                    class="forward--link link mt-xs">Visit&nbsp;marketplace</span></a></p>
+
+
+                    </div>
+
+
+
+                </div>
+                <div class="l-col-widget col-sm-5 col-sm-offset-2">
+
+
+                    <img class="icon-text-image icon-text-image-small"
+                        src="https://website-assets-fw.freshworks.com/attachments/cksfx0eo5021vibg0n897i2jy-80-80.full.png">
+                    <div class="  ">
+
+
+                        <h4>Create value, fast</h4>
+
+                        <p>Accelerate your team’s productivity and efficiency with modern automation and collaboration
+                            tools, to get tangible results in no time.</p>
+
+                        <p><a href="https://www.freshworks.com/platform/"><span class="forward--link link mt-xs">Learn
+                                    how</span></a></p>
+
+
+                    </div>
+
+
                 </div>
             </div>
         </div>
     </section>
+<hr>
+
+
     <section class="class4"></section>
     <section class="class5"></section>
     <section class="class6"></section>
