section 3content updated

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <!-- css style sheets -->
     <link rel="stylesheet" href="css/styles.css">
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/db76c3a070.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -118,18 +120,17 @@
         </div>
     </section>
     <hr>
-    <section class="class3 section-content-grid section-content-grid-home l-section l-section-home section-dark-bg  "
-        data-scroll-target="">
-        <div class="l-page container ">
-            <div class="l-section-heading">
+    <section class="class3  section-3-spacing">
+        <div class="space std-page container">
+            <div class="sec3-heading">
 
 
-                <h2 class="align-center">Frictionless, simple, easy</h2>
+                <h2>Frictionless, simple, easy</h2>
 
-                <p class="align-center">Freshworks makes it fast and easy for businesses to delight their customers and
+                <p >Freshworks makes it fast and easy for businesses to delight their customers and
                     employees.</p>
 
-                <p class="align-center">We take a fresh approach to how businesses discover, engage with, and realize
+                <p >We take a fresh approach to how businesses discover, engage with, and realize
                     value from software throughout their journey.</p>
 
 
@@ -140,7 +141,7 @@
 
 
                     <img class="icon-text-image icon-text-image-small"
-                        src="https://website-assets-fw.freshworks.com/attachments/cksegp1j016clf6g002na6gni-icon-get-up.full.png">
+                        src="images/free-trial.png">
                     <div class="  ">
 
 
@@ -149,8 +150,8 @@
                         <p>Try or purchase our software directly from our website, and onboard in a matter of days, not
                             months.</p>
 
-                        <p><a href="https://www.freshworks.com/products"><span class="forward--link link mt-xs">Start
-                                    free trial</span></a></p>
+                        <p><a href="#"><span class="forward-link link mt-xs">Start
+                                    free trial <i class="icon fas fa-arrow-right"></i></span></a></p>
 
 
                     </div>
@@ -162,7 +163,7 @@
 
 
                     <img class="icon-text-image icon-text-image-small"
-                        src="https://website-assets-fw.freshworks.com/attachments/cksegthxt1evgprg0agwz8g3j-icon-choose-price.full.png">
+                        src="images/pricing.png">
                     <div class="  ">
 
 
@@ -171,8 +172,8 @@
                         <p>Our pricing plans are designed for modern business use cases and affordable for organizations
                             of all sizes.</p>
 
-                        <p><a href="https://www.freshworks.com/pricing"><span class="forward--link link mt-xs">See
-                                    pricing</span></a></p>
+                        <p><a href="#"><span class="forward-link link mt-xs">See
+                                    pricing <i class="icon fas fa-arrow-right"></i></span></a></p>
 
 
                     </div>
@@ -185,7 +186,7 @@
 
 
                     <img class="icon-text-image icon-text-image-small"
-                        src="https://website-assets-fw.freshworks.com/attachments/cksegverv2m2ujqfzql2x6dr0-icon-build-and.full.png">
+                      src="images/marketplace.png">
                     <div class="  ">
 
 
@@ -194,8 +195,8 @@
                         <p>Extend and tailor experiences to meet your unique business needs, with low-code development
                             and over 1,100 custom apps made available on our marketplace.</p>
 
-                        <p><a href="https://www.freshworks.com/apps/"><span
-                                    class="forward--link link mt-xs">Visit&nbsp;marketplace</span></a></p>
+                        <p><a href="#"><span
+                                    class="forward-link link mt-xs">Visit&nbsp;marketplace <i class="icon fas fa-arrow-right"></i></span></a></p>
 
 
                     </div>
@@ -207,7 +208,7 @@
 
 
                     <img class="icon-text-image icon-text-image-small"
-                        src="https://website-assets-fw.freshworks.com/attachments/cksfx0eo5021vibg0n897i2jy-80-80.full.png">
+                       src="images/efficiency.png">
                     <div class="  ">
 
 
@@ -216,8 +217,8 @@
                         <p>Accelerate your team’s productivity and efficiency with modern automation and collaboration
                             tools, to get tangible results in no time.</p>
 
-                        <p><a href="https://www.freshworks.com/platform/"><span class="forward--link link mt-xs">Learn
-                                    how</span></a></p>
+                        <p><a href="#"><span class="forward-link link mt-xs">Learn
+                                    how <i class="icon fas fa-arrow-right"></i></span></a></p>
 
 
                     </div>
