background gradient added

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="l-col-widget col-sm-5">
 
 
-                    <img class="icon-text-image icon-text-image-small"
+                    <img class="col-image col-image-small"
                         src="images/free-trial.png">
                     <div class="  ">
 
@@ -162,7 +162,7 @@
                 <div class="l-col-widget col-sm-5 col-sm-offset-2">
 
 
-                    <img class="icon-text-image icon-text-image-small"
+                    <img class="col-image col-image-small"
                         src="images/pricing.png">
                     <div class="  ">
 
@@ -185,7 +185,7 @@
                 <div class="l-col-widget col-sm-5">
 
 
-                    <img class="icon-text-image icon-text-image-small"
+                    <img class="col-image col-image-small"
                       src="images/marketplace.png">
                     <div class="  ">
 
@@ -207,7 +207,7 @@
                 <div class="l-col-widget col-sm-5 col-sm-offset-2">
 
 
-                    <img class="icon-text-image icon-text-image-small"
+                    <img class="col-image col-image-small"
                        src="images/efficiency.png">
                     <div class="  ">
 
