--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 
 
             </div>
-            <div class="row">
-                <div class="l-col-widget col-sm-5">
+            <div class="row row-margin">
+                <div class=" col-md-5  l-col-widget ">
 
 
                     <img class="col-image col-image-small"
@@ -159,7 +159,7 @@
 
 
                 </div>
-                <div class="l-col-widget col-sm-5 col-sm-offset-2">
+                <div class="col-md-5  l-col-widget  col-md-offset-2 ">
 
 
                     <img class="col-image col-image-small"
@@ -181,8 +181,8 @@
 
                 </div>
             </div>
-            <div class="row">
-                <div class="l-col-widget col-sm-5">
+            <div class="row row-margin">
+                <div class="col-md-5 l-col-widget ">
 
 
                     <img class="col-image col-image-small"
@@ -204,7 +204,7 @@
 
 
                 </div>
-                <div class="l-col-widget col-sm-5 col-sm-offset-2">
+                <div class="col-md-5 l-col-widget  col-md-offset-2">
 
 
                     <img class="col-image col-image-small"
