--- a/index.html
+++ b/index.html
@@ -489,7 +489,20 @@
             </div>
         </div>
     </section>
-    <section class="class8"></section>
+    <section class="class8">
+  
+  <div class="banner-cover" style="background: url(../images/banner.png) no-repeat; ">
+            <div class="container std-page banner-space">
+                <h2 class="align-center align-h2">Ready to get started?</h2>
+                <p class="sub-p align-center">
+                    Join our community of 50,000+ companies of all sizes who use Freshworks’ modern SaaS products to make it fast and easy to delight their customers and employees.
+                </p>
+                <div class="align-center">
+                    <a href="#" class="button btn btn-outline-primary btn-lg btn-block btn-white">CONTACT SALES</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
