fixed contact button added

--- a/index.html
+++ b/index.html
@@ -503,6 +503,11 @@
             </div>
         </div>
     </section>
+    <!-- <span class="contact-sales-button hidden-small">
+        <a href="#" class="button btn btn-dark button-space">CONTACT SALES</a>
+    </span> -->
+   <a href="" class="contact-sales-button hidden-small" ><span style="margin-bottom:0;" class="button btn btn-dark "><i style="color:white" class="far fa-envelope"></i> CONTACT SALES</span></a>
+    
 </body>
 
 </html>
