banner loc changed

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
     </section>
     <section class="class8">
   
-  <div class="banner-cover" style="background: url(../images/banner.png) no-repeat; ">
+  <div class="banner-cover" style="background: url(../banner.png) ; ">
             <div class="container std-page banner-space">
                 <h2 class="align-center align-h2">Ready to get started?</h2>
                 <p class="sub-p align-center">
