--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </section>
     <!-- --------------------------------SECTION 3  STARTS---------------------------------- -->
     <section class="class3  section-3-spacing">
-        <div class="space std-page container ">
+        <div class=" std-page container space">
             <div class="sec3-heading">
                 <h2>Frictionless, simple, easy</h2>
                 <p>Freshworks makes it fast and easy for businesses to delight their customers and
